frontend/tests/cases/positive/interfaces/instances/instanceWithPredicateWhichPreventsOverlap.gr
interface Simple (n : Nat) (m : Nat)

instance {n<m} => Simple n m

-- this should not overlap with the previous instance (1>0)
instance Simple 1 0
